Reprise du header (liens externes, + FAQ  +RDV)

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -38,7 +38,7 @@
             <div class="header-principal-left">
                 <div class="logos">
                     <div class="logo logo--0">
-                        <a href="https://solidarites-sante.gouv.fr/">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
 
                             <img src="/img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
                                 width="107" height="62">
@@ -46,7 +46,7 @@
                         </a>
                     </div>
                     <div class="logo logo--1">
-                        <a href="/index.html">
+                        <a href="https://esante.gouv.fr/" target="_blank" >
 
                             <img src="/img/logo-ANS.svg" alt="Accueil Design System ANS" width="166" height="50">
 
@@ -101,7 +101,9 @@
                                                     <li class="nav-item common-nav-item">
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
-                                                    <li class="nav-item common-nav-item">
+                                                            <li class="nav-item common-nav-item">
+                                                                <a class="nav-link" href="/pages/rdv.html">Les RDV du Hub</a>
+                                                            <li class="nav-item common-nav-item">
                                                         <a class="nav-link" href="/pages/webinaires.html">Le Hub en replay</a>
                                                     </li>
                                                     
@@ -113,9 +115,11 @@
                                     <li class="nav-item common-nav-item">
                                         <a class="nav-link" href="/pages/accompagnement.html">Accompagnement</a>
                                     </li>
-
                                     <li class="nav-item common-nav-item">
-                                        <a class="nav-link" href="/pages/contacts.html">Vos contacts</a>
+                                        <a class="nav-link" href="/pages/faq.html">FAQ</a>
+                                    </li>
+                                    <li class="nav-item common-nav-item">
+                                        <a class="nav-link" href="/pages/contacts.html">Contacts</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -176,7 +180,7 @@
         <main class="main bg-drop bg-drop--reverse bg-white" role="main" id="main" tabindex="-1">
 
 
-            <!-- Bannière page d'accueil-->
+
             <!-- SVG pour les formes/pétales. A ajouter seulement une fois dans la page -->
             <svg class="d-block" aria-hidden="true" focusable="false" height="0" width="0">
                 <defs>
@@ -198,6 +202,8 @@
                     </clipPath>
                 </defs>
             </svg>
+
+            <!-- Bannière page d'accueil-->
             <div class="o-banner o-banner--home o-banner--has-image">
                 <div class="container">
 
@@ -554,7 +560,7 @@
             <div class="footer-contentinfo">
                 <ul class="footer-list footer-list--inline">
                     <li class="footer-list__item">
-                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank" target="_blank">
                             Ministère de la Santé et de la Prévention</a>
                     </li>
                     <li class="footer-list__item">
