--- a/web/landing/pages/contacts.html
+++ b/web/landing/pages/contacts.html
@@ -39,7 +39,7 @@
             <div class="header-principal-left">
                 <div class="logos">
                     <div class="logo logo--0">
-                        <a href="https://solidarites-sante.gouv.fr/">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
 
                             <img src="/img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
                                 width="107" height="62">
@@ -47,7 +47,7 @@
                         </a>
                     </div>
                     <div class="logo logo--1">
-                        <a href="/index.html">
+                        <a href="https://esante.gouv.fr/" target="_blank" >
 
                             <img src="/img/logo-ANS.svg" alt="Accueil Design System ANS" width="166" height="50">
 
@@ -102,7 +102,9 @@
                                                     <li class="nav-item common-nav-item">
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
-                                                    <li class="nav-item common-nav-item">
+                                                            <li class="nav-item common-nav-item">
+                                                                <a class="nav-link" href="/pages/rdv.html">Les RDV du Hub</a>
+                                                            <li class="nav-item common-nav-item">
                                                         <a class="nav-link" href="/pages/webinaires.html">Le Hub en replay</a>
                                                     </li>
                                                     
@@ -114,9 +116,11 @@
                                     <li class="nav-item common-nav-item">
                                         <a class="nav-link" href="/pages/accompagnement.html">Accompagnement</a>
                                     </li>
-
-                                    <li class="nav-item is-active common-nav-item">
-                                        <a class="nav-link" href="/pages/contacts.html">Vos contacts</a>
+                                    <li class="nav-item common-nav-item ">
+                                        <a class="nav-link" href="/pages/faq.html">FAQ</a>
+                                    </li>
+                                    <li class="nav-item common-nav-item is-active ">
+                                        <a class="nav-link" href="/pages/contacts.html">Contacts</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -414,7 +418,7 @@
             <div class="footer-contentinfo">
                 <ul class="footer-list footer-list--inline">
                     <li class="footer-list__item">
-                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank" target="_blank">
                             Ministère de la Santé et de la Prévention</a>
                     </li>
                     <li class="footer-list__item">
