--- a/web/landing/pages/rdv.html
+++ b/web/landing/pages/rdv.html
@@ -39,7 +39,7 @@
             <div class="header-principal-left">
                 <div class="logos">
                     <div class="logo logo--0">
-                        <a href="https://solidarites-sante.gouv.fr/">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
 
                             <img src="/img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
                                 width="107" height="62">
@@ -473,7 +473,7 @@
             <div class="footer-contentinfo">
                 <ul class="footer-list footer-list--inline">
                     <li class="footer-list__item">
-                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank" target="_blank">
                             Ministère de la Santé et de la Prévention</a>
                     </li>
                     <li class="footer-list__item">
