--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -38,7 +38,7 @@
             <div class="header-principal-left">
                 <div class="logos">
                     <div class="logo logo--0">
-                        <a href="https://solidarites-sante.gouv.fr/">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
 
                             <img src="/img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
                                 width="107" height="62">
@@ -46,7 +46,7 @@
                         </a>
                     </div>
                     <div class="logo logo--1">
-                        <a href="/index.html">
+                        <a href="https://esante.gouv.fr/" target="_blank" >
 
                             <img src="/img/logo-ANS.svg" alt="Accueil Design System ANS" width="166" height="50">
 
@@ -89,7 +89,7 @@
                                         <a class="nav-link" href="/index.html">Bienvenue<span class="sr-only">(page
                                                 courante)</span></a>
                                     </li>
-                                    <li class="nav-item common-nav-item">
+                                    <li class="nav-item common-nav-item is-active ">
                                         <button class="nav-link" type="button" data-toggle="collapse"
                                             data-target="#nav1-nav-collapse-submenu--2"
                                             aria-controls="nav1-nav-collapse-submenu--2" aria-expanded="false">Le Hub
@@ -98,10 +98,12 @@
                                             data-parent="#menuPrincipal">
                                             <div class="nav-collapse-inner">
                                                 <ul class="navbar-nav nav-lvl--2">
-                                                    <li class="nav-item is-active common-nav-item">
+                                                    <li class="nav-item common-nav-item is-active ">
                                                         <a class="nav-link" href="/pages/travaux.html">Travaux en
                                                             cours</a>
-                                                    <li class="nav-item common-nav-item">
+                                                            <li class="nav-item common-nav-item">
+                                                                <a class="nav-link" href="/pages/rdv.html">Les RDV du Hub</a>
+                                                            <li class="nav-item common-nav-item">
                                                         <a class="nav-link" href="/pages/webinaires.html">Le Hub en replay</a>
                                                     </li>
                                                     
@@ -113,9 +115,11 @@
                                     <li class="nav-item common-nav-item">
                                         <a class="nav-link" href="/pages/accompagnement.html">Accompagnement</a>
                                     </li>
-
                                     <li class="nav-item common-nav-item">
-                                        <a class="nav-link" href="/pages/contacts.html">Vos contacts</a>
+                                        <a class="nav-link" href="/pages/faq.html">FAQ</a>
+                                    </li>
+                                    <li class="nav-item common-nav-item">
+                                        <a class="nav-link" href="/pages/contacts.html">Contacts</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -170,12 +174,13 @@
             </div>
         </div>
     </header>
+
     <div class="body-wrapper">
         <!-- Emplacement du Header -->
         <main class="main bg-drop bg-drop--reverse bg-white" role="main" id="main" tabindex="-1">
 
 
-            <!-- Bannière page interne -->
+            
             <!-- SVG pour les formes/pétales. A ajouter seulement une fois dans la page -->
             <svg class="d-block" aria-hidden="true" focusable="false" height="0" width="0">
                 <defs>
@@ -186,6 +191,7 @@
                 </defs>
             </svg>
 
+            <!-- Bannière page interne -->
             <div class="o-banner o-banner--has-image o-banner--has-breadcrumb">
                 <div class="container">
                     <nav class="breadcrumb-wrapper" role="navigation" aria-label="Fil d'ariane">
@@ -224,7 +230,20 @@
                 </div>
             </div>
 
+            <!-- Bandeau gris Evènements-->
+            <div class="bg-gray-400 pt-2 pb-2">
 
+                <div class="container paragraph-title-text text-center text-default">
+                    <h2>Périmètres d'échanges </h2>
+
+                    <div class="wysiwyg text-center mt-2 mb-2">
+                    <p> L'ensemble des périmètres d'échanges actuellement à l'étude par le Hub Santé sont décrits et listés ci-dessous. 
+                        <br>Nous organisons régulièrement des réunions et webinaires pour échanger sur l'avancement des travaux : n'hésitez pas à consultez nos rubriques <a href="/pages/rdv.html"
+                        target="_blank"> <i>Les RDV du Hub</i>.</a> et <a href="/pages/webinaires.html" target="_blank"> <i>le Hub en Replay</i>.</a></p>
+
+                    </div>
+                </div>
+            </div>
 
             <!-- Titre 15-15 -->
             <div class="bg-white">
@@ -499,7 +518,7 @@
             <div class="footer-contentinfo">
                 <ul class="footer-list footer-list--inline">
                     <li class="footer-list__item">
-                        <a href="https://solidarites-sante.gouv.fr/" target="_blank">
+                        <a href="https://solidarites-sante.gouv.fr/" target="_blank" target="_blank">
                             Ministère de la Santé et de la Prévention</a>
                     </li>
                     <li class="footer-list__item">
