--- a/web/landing/pages/faq.html
+++ b/web/landing/pages/faq.html
@@ -349,7 +349,7 @@
                                     Pour les SAMU et entitées de Santé souhaitant raccorder leur logiciel en production sur les environnements de Pré-Production et Production du Hub Santé, des certificats IGC Santé PROD sont nécessaires.
                                     <br>
                                     <br> Dans le cadre du Hub Santé, vous trouverez les détails d'obtention des certificats 
-                                    dans le <a href="/pages/accompagnement.html#technique" target="_blank"> <i> DST </i></a>.</p>           
+                                    sur le <a href="https://industriels.esante.gouv.fr/produits-et-services/certificats-logiciels#paragraph-id--13323" target="_blank"> <i> Portail industriel de l'ANS </i></a>.</p>           
                                 </div>
                             </div>                       
                 </div>
