feat: ajout d'ancres pour les invitations

--- a/web/landing/pages/rdv.html
+++ b/web/landing/pages/rdv.html
@@ -253,7 +253,7 @@
         
 
             <!-- Bannière Projectathons -->
-            <div class="paragraph-space o-paragraph--text-media__wrapper">
+            <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathons">
                 <div class="container ">
                     <div class="o-paragraph--text-media__slider ">                
                         <div class="o-paragraph--text-media__item">
@@ -306,42 +306,43 @@
 
 
             <!-- Bannière GT territoires -->
-            <div class="paragraph-space o-paragraph--text-media__wrapper">
+            <div class="paragraph-space o-paragraph--text-media__wrapper" id="gt_territoires">
                 <div class="container">
-                    <div class="o-paragraph--text-media__slider">                <div class="o-paragraph--text-media__item">
-                                <div class="o-paragraph--text-media rightVisual">
-                                    <div class="row align-items-center">
-                                        <div class="col-md mb-3 mb-md-0">
-                                            <div class="o-paragraph--text-media__content">
-                                                <h2>GT Territoires</h2>
-                                                <div class="wysiwyg mb-3">
-                                                    <p> Afin de travailler conjointement et efficacement avec les initiatives locales, le Hub Santé organise un GT Territoires à destination des ARS et GRADeS toutes les 8 semaines.
-                                                        <br>
-                                                        Ce GT sera l'occasion de partager à tous les derniers travaux du Hub Santé et de donner de la visibilité sur les chantiers à venir.
-                                                        <br>
-                                                        Un moment d'échanges permettra également aux régions de remonter leurs questions et de présenter leurs projets locaux pour construire, ensemble, une action globale pertinente.
+                    <div class="o-paragraph--text-media__slider">                
+                        <div class="o-paragraph--text-media__item">
+                            <div class="o-paragraph--text-media rightVisual">
+                                <div class="row align-items-center">
+                                    <div class="col-md mb-3 mb-md-0">
+                                        <div class="o-paragraph--text-media__content">
+                                            <h2>GT Territoires</h2>
+                                            <div class="wysiwyg mb-3">
+                                                <p> Afin de travailler conjointement et efficacement avec les initiatives locales, le Hub Santé organise un GT Territoires à destination des ARS et GRADeS toutes les 8 semaines.
                                                     <br>
-                                                    <br> <u>Périodicité :</u> toutes les 8 semaines.
-                                                    <br> <u>Public :</u> ARS et GRADeS.
-                                                    <br> <u>Horaires :</u> le jeudi de 10h à 12h. 
-                                                    <br> <u>Invitation :</u>
-                                                    </p>
-                                                </div>                                    
-                                                <div class="paragraph--lien">
-                                                    <a href="/resources/Invitations ICS/Hub Sante - Invitation GT Territoires.ics" target="_blank"  class="btn btn--style1 btn--white">GT Territoires</a>
-                                                </div>
+                                                    Ce GT sera l'occasion de partager à tous les derniers travaux du Hub Santé et de donner de la visibilité sur les chantiers à venir.
+                                                    <br>
+                                                    Un moment d'échanges permettra également aux régions de remonter leurs questions et de présenter leurs projets locaux pour construire, ensemble, une action globale pertinente.
+                                                <br>
+                                                <br> <u>Périodicité :</u> toutes les 8 semaines.
+                                                <br> <u>Public :</u> ARS et GRADeS.
+                                                <br> <u>Horaires :</u> le jeudi de 10h à 12h. 
+                                                <br> <u>Invitation :</u>
+                                                </p>
+                                            </div>                                    
+                                            <div class="paragraph--lien">
+                                                <a href="/resources/Invitations ICS/Hub Sante - Invitation GT Territoires.ics" target="_blank"  class="btn btn--style1 btn--white">GT Territoires</a>
                                             </div>
                                         </div>
-                                            <div class="col-md o-paragraph--text-media__media_column">
-                                                <div class="o-paragraph--text-media__media is-clipped">
-                                                    <div class="o-paragraph--text-media__clip">
-                                                    <img src="/img/crea/illlustrations rdv/Comite territoires.png" alt="" width="482" height="446" loading="lazy">
-                                                    </div>
-                                                </div>
+                                    </div>
+                                    <div class="col-md o-paragraph--text-media__media_column">
+                                        <div class="o-paragraph--text-media__media is-clipped">
+                                            <div class="o-paragraph--text-media__clip">
+                                            <img src="/img/crea/illlustrations rdv/Comite territoires.png" alt="" width="482" height="446" loading="lazy">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
                     </div>         
                 </div>
             </div>
