feat: ajout d'un petit script pour ouvrir la question si id en ancre dans le lien

--- a/web/landing/pages/faq.html
+++ b/web/landing/pages/faq.html
@@ -395,6 +395,29 @@
 <script type="text/javascript" src="/script/tiny-slider.js"></script>
 <script type="text/javascript" src="/script/bloc-o-remontees-diverses.js"></script>
 <script type="text/javascript" src="/script/bloc-global-sliders.js"></script>
+<script>
+    // Custom script to open the question when the anchor is matching its ID
+    // Function to check if the anchor in the URL matches the h3 id
+    function clickButtonOnAnchorMatch() {
+        // Get the current anchor from the URL (e.g., #technologie)
+        const anchor = window.location.hash.substring(1); // Remove the '#' symbol
+
+        // Find the h3 element by ID
+        const h3Element = document.querySelector(`h3#${anchor}`);
+
+        // If the h3 element exists and has a button inside it
+        if (h3Element) {
+            const button = h3Element.querySelector('button');
+            if (button) {
+                // Simulate a click on the button
+                button.click();
+            }
+        }
+    }
+
+    // Run the function when the page loads
+    window.addEventListener('DOMContentLoaded', clickButtonOnAnchorMatch);
+</script>
 </body>
 
 <!-- Bandeau bas -->
