--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -347,29 +347,29 @@
             </div>
             <div class="o-paragraph--files row col--eq-height mt-4 ">
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-                    <a href="/resources/Accompagnement/DSF/24.08.21_Hub Sante_Dossier des Specifications.pdf"
+                    <a href="/resources/Accompagnement/DSF/24.10.23_Hub Sante_Dossier des Specifications.pdf"
                     class="m-file bg-gray-300 rounded-sm top-left-radius-0 " target="_blank">
                      <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles (DSF)</p>
                      <p class="m-file__info text-default mb-0"><I>
-                         PDF - Version 1.0
+                         PDF - Version 2.0
                          <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 21 août au 8 septembre 2024</p>">
                              <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
-                             <span class="sr-only">Mise en concertation du 21 août au 8 septembre 2024</span>
+                             <span class="sr-only">Mise en concertation du 23 octobre au 4 novembre 2024</span>
                          </button>
-                         - 11.4 Mo
+                         - 12.6 Mo
                      </I></p>
                  </a>
                 </div>
                 <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3 ">
-                    <a href="/resources/Accompagnement/DSF/24.08.21_DSF_Hub Sante.zip" class="m-file bg-gray-300 rounded-sm top-left-radius-0 "
+                    <a href="/resources/Accompagnement/DSF/24.10.23_DSF_Hub Sante.zip" class="m-file bg-gray-300 rounded-sm top-left-radius-0 "
                         target="_blank">
                         <p class="m-file__title h4 mb-1">Annexes du DSF</p>
-                        <p class="m-file__info text-default mb-0"><I>ZIP - Version 1.0
+                        <p class="m-file__info text-default mb-0"><I>ZIP - Version 2.0
                             <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 21 août au 8 septembre 2024</p>">
                                 <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
                                 <span class="sr-only">Mise en concertation du 21 août au 8 septembre 2024</span>
                             </button>
-                            - 16.8 Mo</I></p>
+                            - 24.4 Mo</I></p>
                     </a>
                 </div>
             </div>
