--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -352,9 +352,9 @@
                      <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles (DSF)</p>
                      <p class="m-file__info text-default mb-0"><I>
                          PDF - Version 2.0
-                         <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 21 août au 8 septembre 2024</p>">
+                         <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 23 octobre au 13 novembre 2024</p>">
                              <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
-                             <span class="sr-only">Mise en concertation du 23 octobre au 4 novembre 2024</span>
+                             <span class="sr-only">Mise en concertation du 23 octobre au 13 novembre 2024</span>
                          </button>
                          - 12.6 Mo
                      </I></p>
@@ -365,9 +365,9 @@
                         target="_blank">
                         <p class="m-file__title h4 mb-1">Annexes du DSF</p>
                         <p class="m-file__info text-default mb-0"><I>ZIP - Version 2.0
-                            <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 21 août au 8 septembre 2024</p>">
+                            <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 23 octobre au 13 novembre 2024</p>">
                                 <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
-                                <span class="sr-only">Mise en concertation du 21 août au 8 septembre 2024</span>
+                                <span class="sr-only">Mise en concertation du 23 octobre au 13 novembre 2024</span>
                             </button>
                             - 24.4 Mo</I></p>
                     </a>
