--- a/web/landing/pages-footer/plan_de_site.html
+++ b/web/landing/pages-footer/plan_de_site.html
@@ -160,10 +160,14 @@
             </div>
         </li>
 
-         
-        <li><a href="/pages/accompagnement.html" class="links_sitemap__link expanded">Accompagnement</a>
-        </li>
-        
+        <li><a href="#" class="links_sitemap__link expanded">Accompagnement</a>
+            <div class="item-list">
+                <ul>
+                <li><a href="/pages/parcours.html" class="links_sitemap__link infertile">Se raccorder au Hub Santé
+                <li><a href="/pages/accompagnement.html" class="links_sitemap__link infertile">Ressources éditeurs</a></li>
+                </ul>
+            </div>
+        </li>      
         <ul></ul>
         <li><a href="/pages/contacts.html" class="links_sitemap__link expanded">Vos Contacts</a><div class="item-list"></li>
 
