--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -91,10 +91,10 @@
                                 </li>
                                 <li class="nav-item common-nav-item">
                                     <button class="nav-link" type="button" data-toggle="collapse"
-                                        data-target="#nav1-nav-collapse-submenu--2"
-                                        aria-controls="nav1-nav-collapse-submenu--2" aria-expanded="false">Le Hub
+                                        data-target="#nav1-nav-collapse-submenu--1"
+                                        aria-controls="nav1-nav-collapse-submenu--1" aria-expanded="false">Le Hub
                                         Santé</button>
-                                    <div class="collapse nav-collapse" id="nav1-nav-collapse-submenu--2"
+                                    <div class="collapse nav-collapse" id="nav1-nav-collapse-submenu--1"
                                         data-parent="#menuPrincipal">
                                         <div class="nav-collapse-inner">
                                             <ul class="navbar-nav nav-lvl--2">
@@ -112,9 +112,28 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item common-nav-item is-active ">
-                                    <a class="nav-link" href="/pages/accompagnement.html">Accompagnement</a>
-                                </li>
+
+                                    <li class="nav-item common-nav-item is-active">
+                                        <button class="nav-link" type="button" data-toggle="collapse"
+                                            data-target="#nav1-nav-collapse-submenu--2"
+                                            aria-controls="nav1-nav-collapse-submenu--2" aria-expanded="false">Accompagnement</button>
+                                        <div class="collapse nav-collapse" id="nav1-nav-collapse-submenu--2"
+                                            data-parent="#menuPrincipal">
+                                            <div class="nav-collapse-inner">
+                                                <ul class="navbar-nav nav-lvl--2">
+                                                    <li class="nav-item common-nav-item ">
+                                                        <a class="nav-link" href="/pages/parcours.html">Se raccorder au Hub</a>
+                                                    <li class="nav-item common-nav-item is-active">
+                                                        <a class="nav-link" href="/pages/accompagnement.html">Ressources éditeurs</a>
+
+
+                                    </li>
+                                </ul>
+                        </div>
+                    </div>
+                    
+                                    </li>
+
                                 <li class="nav-item common-nav-item">
                                     <a class="nav-link" href="/pages/faq.html">FAQ</a>
                                 </li>
@@ -205,7 +224,7 @@
                             </svg>
                         </a></li>
                         
-                        <li class="breadcrumb-item active" aria-current="page"> Accompagnement
+                        <li class="breadcrumb-item active" aria-current="page"> Ressources
                         </li>
                     </ol>
                 </nav>
@@ -352,7 +371,7 @@
                      <p class="m-file__title h4 mb-1">Dossier des Spécifications Fonctionnelles (DSF)</p>
                      <p class="m-file__info text-default mb-0"><I>
                          PDF - Version 2.0
-                         <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 23 octobre au 13 novembre 2024</p>">
+                         <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 21 août au 8 septembre 2024</p>">
                              <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
                              <span class="sr-only">Mise en concertation du 23 octobre au 13 novembre 2024</span>
                          </button>
@@ -365,7 +384,7 @@
                         target="_blank">
                         <p class="m-file__title h4 mb-1">Annexes du DSF</p>
                         <p class="m-file__info text-default mb-0"><I>ZIP - Version 2.0
-                            <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 23 octobre au 13 novembre 2024</p>">
+                            <button type="button" data-toggle="tooltip" data-placement="top" data-html="true" title="<p>Mise en concertation du 21 août au 8 septembre 2024</p>">
                                 <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false"><use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use></svg>
                                 <span class="sr-only">Mise en concertation du 23 octobre au 13 novembre 2024</span>
                             </button>
