--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -327,8 +327,8 @@
                 <tbody>
                     <tr>
                         <th scope="row">Echanges AMU-SNP</th>
-                        <td>Scriptal (SAMU 18 )
-                        <br>Appligos (SAMU 41)
+                        <td>Scriptal (SAS 18)
+                        <br>Appligos (SAS 41)
                         </td>
                         <td></td>
                     </tr>
