--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -259,7 +259,7 @@
                     <div class="wysiwyg text-center mt-2 mb-2">
                         <p>
                             L'Agence du Numérique en Santé vous accompagne dans votre raccordement au Hub Santé.
-                            <br> Pensez également à consulter également l'ensemble de la documentation mise à votre
+                            <br> Pensez également à consulter l'ensemble de la documentation mise à votre
                             disposition sur le site.
                         </p>
                     </div>
@@ -282,14 +282,14 @@
             </div>
             <div class="o-paragraph--parcours__container">
                 <div class="o-paragraph--parcours__content">
-                    <h2>Accès aux Slack éditeurs</h2>
+                    <h2>Accès au Slack éditeurs</h2>
 
                     <div class="wysiwyg">
-                        <p>Un chanel Slack dédié à chaque éditeur est disponible pour communiquer avec l'équipe du Hub
+                        <p>Un channel Slack dédié à chaque éditeur est disponible pour communiquer avec l'équipe du Hub
                             Santé
                             de manière fluide et sécurisée. Le lien ci-dessous vous permet de rejoindre le Slack, pensez
                             à
-                            nous envoyer un email afin qu'on paramètre vos accès à votre channel dédié.
+                            nous envoyer un email afin qu'on paramètre les accès à votre channel dédié.
                         </p>
 
                         <div class="container" style="display: flex; justify-content: space-evenly; flex-wrap: wrap;">
@@ -341,7 +341,7 @@
                                 href="https://github.com/ansforge/SAMU-Hub-Modeles?tab=readme-ov-file#hub-sant%C3%A9---librairie-mod%C3%A8les"
                                 target="_blank"> <i>repository</i> GitHub public</a>.
                             <br> Les <strong>schémas, exemples, diagrammes UML et documents détaillés</strong> y sont
-                            disponibles ainsi que des SDK Java et Ruby associés et directement utilisables dans votre
+                            consultables; ainsi que des SDK Java et Ruby associés et directement utilisables dans votre
                             code.
                         </p>
                         <h3>2 - Code applicatif Hub Santé (privé)</h3>
@@ -443,7 +443,8 @@
                                     du Hub
                                     Santé, des certificats <strong>IGC Santé PROD</strong> sont nécessaires.
                             </ul>
-                            <p> Dans le cadre du Hub Santé, vous trouverez les détails d'obtention des certificats sur
+                            <p> <h3>1 - Demande des certificats </h3>
+                                Dans le cadre du Hub Santé, vous trouverez les détails d'obtention des certificats sur
                                 le
                                 <strong>Portail industriel de l'ANS</strong> :
                             </p>
@@ -456,10 +457,11 @@
                                 Santé</a>
                         </div>
                         <div class="paragraph--lien"></div>
-
-                        <p>Une fois les certificats obtenus, veuillez <strong>envoyer le certificat public à l'équipe
-                                Hub Santé</strong>
-                            (par Slack ou email) afin que vos accès, files et droits soient configurés.</p>
+                        
+                    
+                        <p><h3>2 - Enregistrement des certificats sur le Hub Santé </h3>
+                            Une fois les certificats obtenus, veuillez <strong>envoyer le certificat public à l'équipe
+                                Hub Santé</strong> (par Slack ou email) afin que vos accès, files et droits soient configurés.</p>
                 </div>
             </div>
         </div>
@@ -505,8 +507,8 @@
                         Les Clients auront le droit d'échanger uniquement avec les acteurs également enregistrés.
                         Les échanges autorisés sont définis par les
                         <a href="/pages/accompagnement.html#fonctionnel" target="_blank">Dossiers de Spécifications
-                            Fonctionnelles (DSF)</a>
-                        précisant notamment les modèles de données attendus et contrôlés lors des échanges de messages
+                            Fonctionnelles (DSF)</a> ;
+                        qui précise notamment les modèles de données attendus et contrôlés lors des échanges de messages
                         par le Hub Santé.
 
                         </p>
